All TmatCoefDiff and CoefInt output files are copied in the table directory corresponding to their option: tables/default or tables/elev90 for example Tables are systematically generated with generate_tables.sh even if the file already exist

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 *.egg-info/
 operadar/operadar_conf.py
 tables_generator/tables/
+tables_generator/param/tmp_config
 !tables_generator/tables/.gitkeep
 tables_generator/src/Tmat
 tables_generator/src/TmatInt
+plot_tools/IMG/
+plot_tools/IMG/.gitkeep
