--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ tables_generator/param/tmp_config
 tables_generator/src/Tmat
 tables_generator/src/TmatInt
 plot_tools/IMG/
-plot_tools/IMG/.gitkeep
+plot_tools/nohupOUT/
