Add libFortran (with lapack) in .gitignore and uptdate plot_tools/plot_D_M_varpol_alltypes.py to add tmat option in figure name

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ tables_generator/param/tmp_config
 !tables_generator/tables/.gitkeep
 tables_generator/src/Tmat
 tables_generator/src/TmatInt
+tables_generator/src/libFortran/
 plot_tools/IMG/
 plot_tools/nohupOUT/
