--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-###### Requirements ######
+# Minimal pip dependencies (pin after CI verification)
+numpy>=1.24
+xarray>=2023.2
+pandas>=1.5
+netCDF4>=1.6
+matplotlib>=3.6
+cartopy>=0.21
+dask>=2023.2
+scipy>=1.10
+tqdm>=4.65
+pyyaml>=6.0
 
-epygram >= 2.0.0
-numpy >= 1.21.5
-pandas >= 1.3.5
+# epygram must be installed from pip (installed via conda env's pip step below)
+epygram
